--- a/app/views/tweets/_post_content.html.erb
+++ b/app/views/tweets/_post_content.html.erb
@@ -4,7 +4,7 @@
 
 </div>
 <div class="modal-body">
-  <%= form_for([@users, post] ,:remote=>true) do |form| %>
+  <%= form_for([@user, post] ,:remote=>true) do |form| %>
   <% if post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(post.errors.count, "error") %> prohibited this tweet from being saved:</h2>
