like, dislike and count added

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -107,7 +107,8 @@
    
   
 
-    <% # = @usertweets.inspect %>
+    <% # = @tweetlikecount.inspect %>
+    <% # = @userlikestweet.inspect %>
     <!-- tweetbox ends -->
     <%= render @usertweets , locals: {tweet: @usertweets} %>
     <!-- post starts -->
