--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -29,11 +29,23 @@
         </div>
         <div class="post__footer">
           <span class="material-icons"> repeat </span>
-          <% if @tweet_likes.include?tweet.id%>
-          <span class="material-icons" style="color: red;">favorite_border</span>
+          <!-- show dislike thumb -->
+          <% if @userlikestweet[[tweet.id, 2]] %>
+            <span class="material-icons" style="color:red;"> thumb_down</span>
           <% else %>
-          <span class="material-icons"><%= link_to 'favorite_border', user_like_path(tweet)%>  </span>
+            <span class="material-icons"> <%= link_to 'thumb_down', user_dislike_path(tweet) %></span>
           <% end %>
+          <!-- show dislike thumb count -->
+          <span class="count" > <%= @tweetlikecount[[tweet.id, 2]] ? @tweetlikecount[[tweet.id, 2]] : 0 %> </span>
+          <!-- show like thumb -->
+          <% if @userlikestweet[[tweet.id, 1]] %>
+            <span class="material-icons" style="color:green;"> thumb_up</span>
+          <% else %>
+            <span class="material-icons"> <%= link_to 'thumb_up', user_like_path(tweet) %></span>
+          <% end %>
+          <!-- show like thumb count -->
+          <%= @tweetlikecount[[tweet.id, 1]] ? @tweetlikecount[[tweet.id, 1]] : 0 %>
+          <!-- comment -->
           <span class="material-icons comment_tweet" > <%= link_to 'comment', user_comment_path(tweet), remote: true %> </span>
           
         </div>
