--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -226,3 +226,10 @@ body {
   font-size: 18px;
   font-weight: 800;
 }
+
+
+
+//a:link { text-decoration: none; }
+//a:visited { text-decoration: none; }
+//a:hover { text-decoration: none; }
+//a:active { text-decoration: none; }
